test/compare/testdata/fixedbugs/issue927.go
// errorcheck

package main

func main() {
	(x) := 0 // ERROR `non-name (x) on left side of :=`
}